# examples

./: .gitattributes  .gitignore
Coroutines/: Coroutines.sln  Coroutines.vcxproj  Coroutines.vcxproj.filters  Helpers.h  Lesson_10_AwaitTransform.cpp  Lesson_11_Pitfall.cpp  Lesson_1_JustReturn.cpp  Lesson_2_ReturnValue.cpp  Lesson_3_Throw.cpp  Lesson_4_SuspendResume.cpp  Lesson_5_Await.cpp  Lesson_6_DestroyBeforeFinish.cpp  Lesson_7_Awaiter.cpp  Lesson_8_MultipleAwaiters.cpp  Lesson_9_Awaitable.cpp  Lessons.h  main.cpp
ExceptionsErrorCodes/: BadExceptionsExample.cpp  BadExceptionsExample.h  ErrorHandlingTest.h  ErrorHandlingTest_ErrorCodes.cpp  ErrorHandlingTest_Exceptions.cpp  ExceptionsErrorCodes.sln  ExceptionsErrorCodes.vcxproj  ExceptionsErrorCodes.vcxproj.filters  LeagueInfo.h  PerfTest.cpp  PerfTest.h  SqlQueries.h  Sqlite3Helpers.h  main.cpp  readme.md
SharedNativeHostClient/: .gitignore  .npmrc  CMakeLists.txt  CMakePresets.json  README.md  ensureVcpkg.ps1  package.json  run.ps1  tsconfig.json  vcpkg.json
SharedNativeHostClient/dev/make/: BuildSettings.cmake  ClangVersion.cmake  CompilerEnvironment.cmake  External.cmake  FindCompiler.cmake  HelperFunctions.cmake  NpmFunctions.cmake  Platform.cmake  Processor.cmake  Toolchain.cmake  _platform.cmake  compiler_environment.cmake  platform.cmake  toolchain.cmake
SharedNativeHostClient/dev/make/mac/: MacFrameworks.cmake  MacLlvm.cmake  ObjectiveCCheck.cmake
SharedNativeHostClient/dev/make/modules/: FindSharedNativeHost.cmake  FindWebView2.cmake
SharedNativeHostClient/dev/scripts/: CleanVcpkg.ps1  Paths.ps1  RepoChecks.ps1
SharedNativeHostClient/dev/src/: CMakeLists.txt  CommonMain.cpp  CommonMain.h
SharedNativeHostClient/dev/src/clientApp/: AppDirectories.cpp  AppDirectories.h  CMakeLists.txt  ClientApp-logevents.json  CommonMain.cpp  CommonMain.h  OSVersion.impl.h  OSVersion.nhapi.yaml
SharedNativeHostClient/dev/src/clientApp/mac/: AppDelegate.mm  MacPlatformInit.mm  OSVersion.impl.mm  info_plist.cmake  mac.cmake  main.cpp
SharedNativeHostClient/dev/src/clientApp/startupSteps/: InteropObjectsStartupStep.cpp  InteropObjectsStartupStep.h  LoggingStartup.cpp  LoggingStartup.h  MainWindowStartupStep.cpp  PlatformStartupStep.cpp  PlatformStartupStep.h  ServicesRegistrarStartupStep.cpp  ServicesRegistrarStartupStep.h  StartupShutdown.h  TasksSystemStartupStep.cpp  TasksSystemStartupStep.h  WebHostSystemStartupStep.cpp  WebHostSystemStartupStep.h
SharedNativeHostClient/dev/src/clientApp/win/: OSVersion.impl.cpp  WinMain.cpp  win.cmake
SharedNativeHostClient/dev/src/install/: CMakeLists.txt  FixupBundle.cmake
SharedNativeHostClient/dev/src/install/mac/: mac.cmake
SharedNativeHostClient/dev/src/install/win/: win.cmake
SharedNativeHostClient/dev/src/startup/: LoggingStartup.cpp  MainWindowStartupStep.cpp  MainWindowStartupStep.h  StartupShutdown.cpp  TasksSystemStartupStep.cpp  WebHostSystemStartupStep.cpp
SharedNativeHostClient/dev/src/win/: WinMain.cpp  WinPlatformInit.cpp
repro/: CMakeLists.txt  CMakePresets.json  dobuild.ps1
repro/exe/: CMakeLists.txt
repro/staticlib/: CMakeLists.txt  file.cpp  includes.cmake
