set(TARGET_NAME repro)
add_executable(${TARGET_NAME} main.cpp)
target_link_libraries(${TARGET_NAME} staticlib)
target_compile_definitions(${TARGET_NAME} PRIVATE ABCDEFGHIJKLMNOPQRSTUVWXYZ ABCDEFGHIJKLMNOPQRSTUVWXYZ2 ABCDEFGHIJKLMNOPQRSTUVWXYZ3 ABCDEFGHIJKLMNOPQRSTUVWXYZ4 ABCDEFGHIJKLMNOPQRSTUVWXYZ5)
